--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1158,3 +1158,11 @@ tr.integrazione-eliminazione td:first-child a{
 .z-index-top {
 	z-index: 1000;
 }
+
+li.listStyle-elenco{
+	list-style-type: square;
+}
+
+li.listStyle-elenco > label{
+	vertical-align: top;
+}
