Gestione programmi giornalieri EventoRES

--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -458,19 +458,21 @@
 										<span class="required">*</span>
 									</label>
 								</div>
-								<div th:text="${#maps.size(eventoWrapper.dateIntermedieMapTemp)}"></div>
 								<div class="date-intermedie-container" id="dateIntermedieId">
-									<div th:fragment="dateIntermedieId" th:class="${row.last ? 'nextDataIntermedia item form-group' : 'prevDataIntermedia item form-group'}" th:each="data, row : ${eventoWrapper.dateIntermedieMapTemp}">
+	
+									<div th:fragment="dateIntermedieId" th:class="${row.count == (row.size - 1) ? 'nextDataIntermedia item form-group' : 'prevDataIntermedia item form-group'}" 
+												th:each="data, row : ${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap}"
+												th:if="${data.value.tipoData==T(it.tredi.ecm.web.bean.EventoRESTipoDataProgrammaGiornalieroEnum).INTERMEDIA}">
 										<div class='col-md-4 col-sm-4 col-xs-12'></div>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group datapick">
 											<input type="hidden" th:value="${data.key}" />
 											<input id="dataIntermedia" type="text" class="form-control datapicker-intermedia"
-												th:field="${eventoWrapper.dateIntermedieMapTemp[__${data.key}__]}" />
+												th:field="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.giorno}" />
 											<span class="input-group-addon not-last" onclick="$(this).prev().click()">
 					 							<i class="glyphicon glyphicon-calendar"></i>
 											</span>
-											<span class="input-group-addon" th:onclick="${row.last ? 'aggiungiDataIntermedia(this, ''dateIntermedieId'')' : 'rimuoviDataIntermedia(this, ''dateIntermedieId'', ' + data.key + ')'}">
-												<i th:class="${row.last ? 'fa fa-plus' : 'fa fa-minus'}"></i>
+											<span class="input-group-addon" th:onclick="${row.count == (row.size - 1) ? 'aggiungiDataIntermedia(this, ''dateIntermedieId'')' : 'rimuoviDataIntermedia(this, ''dateIntermedieId'', ' + data.key + ')'}">
+												<i th:class="${row.count == (row.size - 1) ? 'fa fa-plus' : 'fa fa-minus'}"></i>
 											</span>
 										</div>
 									</div>
@@ -736,10 +738,6 @@
 						</div>
 						<div role="tabpanel" class="tab-pane fade" id="tab_content2" aria-labelledby="tab2">
 							<div class="col-xs-12 section-index" id="section-2" th:fragment="section-2">
-								<!-- PROGRAMMA EVENTO -->
-								<!-- <a id="add-programma" class="btn btn-success" th:onclick="'addProgramma(\'attivitaRES\',\'23\/06\/1986\')'">
-									<span><i class="fa fa-minus"></i></span>
-								</a> -->
 								<div class='programmaEvento item form-group' id="programma">
 									<th:block th:include="evento/eventoEdit :: attivitaRES" />
 								</div>
@@ -1361,6 +1359,7 @@
 				  		//TODO mostra error sui campi mancanti
 				    	alert( "error" );
 				 	 })
+				 	 sendAjaxReloadSection('2');
 
 					/*
 					var cloned = $("<div class='nextDataIntermedia item form-group'></div>")
@@ -1397,6 +1396,8 @@
 				  		//TODO mostra error sui campi mancanti
 				    	alert( "error" );
 				 	 })
+				 	 //Aggiorno il tab 2
+				 	 sendAjaxReloadSection('2');
 
 					/*
 					console.log($(caller).closest(".item").html());
@@ -1453,6 +1454,7 @@
 				//funzione che calcola al doc ready o all'onchange della relativa select
 				//se mostrare o meno input aggiuntivi relativi alla tipologia dell'evento
 				function mostraNascondiCampiTipologiaEvento(value) {
+					alert('mostraNascondiCampiTipologiaEvento');
 					switch (value) {
 					case 'CONVEGNO_CONGRESSO':
 						$(".convegno-congresso").slideDown("slow");
@@ -1678,11 +1680,6 @@
 					var removeAttivitaFrom = $(caller).parent().parent().parent().parent().parent().data('programma-id');
 					var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeAttivitaFrom/|}]] + target + "/" + removeAttivitaFrom + "/" + rowIndex;
 
-					$("#" + target).load(url);
-				}
-
-				function addProgramma(target,programmaDate){
-					var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addProgramma/|}]] + target + "?programmaDate=" + encodeURIComponent(programmaDate);
 					$("#" + target).load(url);
 				}
 
